--- a/http-server/project.html
+++ b/http-server/project.html
@@ -8,6 +8,7 @@
 <body>
    <h1>Projects</h1>
    <h3>Project List</h3>
-   <a href="./registration">&lt;-New Registration Form</a>
+   <a href="/registration">&lt;-New Registration Form</a>
+   <a href="/">&lt;- Back to home</a>
 </body>
 </html>
